--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
             <div class="header-text">
                 <p>Student</p>
-                <h1>Hi,I'm <span>Ashish <br></span> From Jamuniya</h1>
+                <h1>Hi,I'm <span>Ashish <br></span> From Indore</h1>
             </div>
         </div>
     </div>
