--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ashish Rai</title>
 
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5a79088d0e.js" crossorigin="anonymous"></script>
