--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
             <div class="header-text">
                 <p>Student</p>
-                <h1>Hi,I'm <span>Ashish <br></span> From Indore</h1>
+                <h1>Hi,I'm <span>Ashish <br></span>Frontend Developer</h1>
             </div>
         </div>
     </div>
@@ -45,10 +45,11 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>I am currently studying Mtech Integrated in IT from Devi Ahilya bai university NAAC grade A+. 
-                        Learning java and DSA familiar with android studio .
-                        Teaching is my hobby, experienced with content creation .
-                        Entrepreneurship is my ultimate goal.</p>
+                    <p>Frontend Developer
+                       I am currently studying Mtech Integrated IT from DAVV Indore. 
+                      I am experienced in Web development with React , Redux , ExpressJs ,CSS , MongoDb , Javascript
+                     500+ DSA Questions on GFG , Leetcode , Codeforces .Proficient in Core Java ,OOPS.
+                       </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
