--- a/index.html
+++ b/index.html
@@ -58,25 +58,23 @@
                     </div>
                     <div class="tab-contents  active-tab  " id="skills">
                         <ul>
-                            <li><span>Language</span><br>Java C C++ Python </li>
-                            <li><span>Web Development</span><br>HTML Css Javascript</li>
-                            <li><span>App Development</span><br>Building Andriod Apps</li>
+                            <li><span>Language</span><br>Java JavaSript </li>
+                            <li><span>Web Development</span><br>React Express Javascript</li>
+                            <li><span>Problem Solving</span><br>450+ DSA</li>
 
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Content Creation</span><br>Today NFT News</li>
-                            <li><span>SEO and Writer</span><br>IMPGyan a health website</li>
+                            <li><span>QA</span><br>Walkover</li>
                             <li><span>Web Development</span><br>At Yhills</li>
-
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>High School</span><br>Model High School Jabalpur 91.00%</li>
                             <li><span>Higher Secondary</span><br>School of Excellence Jabalpur 90.00%</li>
-                            <li><span>Btech+Mtech-currently</span><br>International Institute of Professional Studies DAVV Indore</li>
+                            <li><span>Btech+Mtech-currently</span><br>International Institute of Professional Studies DAVV Indore 8.50</li>
 
                         </ul>
                     </div>
@@ -92,18 +90,19 @@
             <h1 class="sub-title">My Services</h1>
 
             <div class="services-list">
+                  <div>
+                    <i class="fa-solid fa-crop"></i>
+                    <h2>Frontend developer</h2>
+                    <p>4+ project in MERN</p>
+                    <a href="https://www.iipsunofficial.com/">Learn more</a>
+                </div>
                 <div> <i class="fa-solid fa-code"></i>
 
                     <h2>Web Design</h2>
                     <p>Web development experience with one year</p>
-                    <a href="https://ashishrair500.github.io/todolist.github.io/">Learn more</a>
+                    <a href="https://www.iipsunofficial.com/">Learn more</a>
                 </div>
-                <div>
-                    <i class="fa-solid fa-crop"></i>
-                    <h2>Content Creation</h2>
-                    <p>Worked for many websites as content creater and SEO expert</p>
-                    <a href="https://impgyann.blogspot.com/">Learn more</a>
-                </div>
+              
                 <div>
                     <i class="fab fa-app-store"></i>
                     <h2>App design</h2>
@@ -119,23 +118,13 @@
         <div class="container">
             <h2 class="sub-title">My Work</h2>
             <div class="work-list">
-                <div class="work">
-                    <img src="images/work-1.png" alt="">
-                    <div class="layer">
-
-                        <h3>Andriod App</h3>
-                        <p>I had developed two andriod with one with kotlin and another with Java</p>
-                        <a href="https://github.com/ashishrair500/Grocery-App"> <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
-                    </div>
-
-                </div>
+               
                 <div class="work">
                     <img src="images/work-2.png" alt="">
                     <div class="layer">
-
-                        <h3>Content Creation</h3>
-                        <p>I am blogger And SEO expert And run two website</p>
-                        <a href="https://impgyann.blogspot.com/"> <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Frontend Developer</h3>
+                        <p>I am a experienced Frontend developer </p>
+                        <a href="https://www.iipsunofficial.com/"> <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -145,6 +134,16 @@
                         <p>Complete two project with HTML CSS and JAVASCRIPT</p>
                         <a href="https://github.com/ashishrair500?tab=repositories"> <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
+                </div>
+                 <div class="work">
+                    <img src="images/work-1.png" alt="">
+                    <div class="layer">
+
+                        <h3>Andriod App</h3>
+                        <p>I had developed two andriod with one with kotlin and another with Java</p>
+                        <a href="https://github.com/ashishrair500/Grocery-App"> <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+
                 </div>
             </div>
 
